--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
  <head>
-  <title>Página del cliente</title>
+  <title>Página principal</title>
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="Estilos.css">
  </head>
